--- a/package.json
+++ b/package.json
@@ -15,13 +15,19 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@expo-google-fonts/roboto": "^0.2.3",
     "@expo/vector-icons": "^14.0.0",
+    "@fontsource/roboto": "^5.0.13",
+    "@mui/icons-material": "^5.15.19",
+    "@mui/material": "^5.15.19",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "axios": "^1.7.2",
     "expo": "~51.0.8",
     "expo-constants": "~16.0.1",
-    "expo-font": "~12.0.5",
+    "expo-font": "~12.0.6",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.14",
     "expo-splash-screen": "~0.27.4",
