--- a/package.json
+++ b/package.json
@@ -22,14 +22,19 @@
     "@fontsource/roboto": "^5.0.13",
     "@mui/icons-material": "^5.15.19",
     "@mui/material": "^5.15.19",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "axios": "^1.7.2",
-    "expo": "~51.0.8",
+    "expo": "^51.0.0",
+    "expo-blur": "~13.0.2",
+    "expo-camera": "~15.0.11",
     "expo-constants": "~16.0.1",
     "expo-font": "~12.0.6",
+    "expo-haptics": "~13.0.1",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.14",
+    "expo-secure-store": "~13.0.1",
     "expo-splash-screen": "~0.27.4",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.4",
@@ -38,17 +43,20 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.2",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-hold-menu": "^0.1.6",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-select-dropdown": "^4.0.1",
-    "react-native-web": "~0.19.10",
-    "expo-camera": "~15.0.11"
+    "react-native-snackbar-component": "^1.1.12",
+    "react-native-unimodules": "^0.14.10",
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
+    "@types/react-native-snackbar-component": "^1.1.9",
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.2",
